--- a/nginx-replicaset.yaml
+++ b/nginx-replicaset.yaml
@@ -4,14 +4,14 @@ metadata: # metadata for ReplicaSet
   name: myapp-replicaset
   labels:
     app: myapp
-    type: frontend
+    tier: frontend
 spec: # spec for replicaset
   template:
     metadata:
       name: myapp-pod
       labels:
         app: myapp
-        type: frontend
+        tier: frontend
     spec:
         containers:
           - name: nginxcontainer
@@ -19,4 +19,4 @@ spec: # spec for replicaset
   replicas: 6 #scale to 6 , then apply
   selector:
     matchLabels: # matches the labels on the pods
-      type: frontend
+      tier: frontend
