--- a/httpd-deployment.yaml
+++ b/httpd-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     tier: frontend
   name: httpd-deployment
 spec:
-  replicas: 5 
+  replicas: 5
   selector:
     matchLabels:
       app: httpd
@@ -20,5 +20,5 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: httpd:2.4-alpine
+      - image: httpd
         name: httpd
