--- a/httpd/httpd-deployment.yaml
+++ b/httpd/httpd-deployment.yaml
@@ -23,5 +23,9 @@ spec:
       - image: httpd
         name: httpd
         volumeMounts:
-          - mountPath: /var/www/html
+          - mountPath: /usr/local/apache2/htdocs/
             name: httpd-pv
+      volumes:
+        - name: httpd-pv
+          hostPath:
+              path: "/tmp/www/html/"
