--- a/httpd/httpd-deployment.yaml
+++ b/httpd/httpd-deployment.yaml
@@ -22,3 +22,10 @@ spec:
       containers:
       - image: httpd
         name: httpd
+        volumeMounts:
+          - mountPath: "/usr/local/apache2/htdocs/"
+            name: httpd-pv
+      volumes:
+        - name: httpd-pv
+          persistentVolumeClaim:
+            claimName: httpd-pvc
