--- a/httpd/httpd-deployment.yaml
+++ b/httpd/httpd-deployment.yaml
@@ -23,9 +23,9 @@ spec:
       - image: httpd
         name: httpd
         volumeMounts:
-          - mountPath: "/usr/local/apache2/htdocs/"
+          - mountPath: "/usr/local/apache2/htdocs/" # we have index.html here
             name: httpd-pv
       volumes:
-        - name: httpd-pv
+        - name: httpd-pv # PersistentVolume create from httpd-pv file
           persistentVolumeClaim:
-            claimName: httpd-pvc
+            claimName: httpd-pvc # PersistentVolumeClaim create from httpd-pvc file
