--- a/persistent_vol/persistent_vol_claim.yaml
+++ b/persistent_vol/persistent_vol_claim.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: task-pv-claim
+  name: nginx-pv-claim
+  labels:
+    app: nginx-pv
 spec:
   storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 500M
+      storage: 50M
