--- a/persistent_vol/persistent_vol_pod.yaml
+++ b/persistent_vol/persistent_vol_pod.yaml
@@ -1,18 +1,20 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: task-pv-pod
+  name: nginx-pv-pod
+  labels:
+    app: nginx-pv
 spec:
   containers:
-    - name: task-pv-container
+    - name: nginx-pv-container
       image: nginx
       ports:
         - containerPort: 80
           name: "http-server"
       volumeMounts:
-        - mountPath: "/usr/share/nginx/html"
-          name: task-pv-claim-storage
+        - mountPath: "/usr/share/nginx/html/"
+          name: nginx-pv-volume
   volumes:
-    - name: task-pv-claim-storage
+    - name: nginx-pv-volume
       persistentVolumeClaim:
-        claimName: task-pv-claim
+        claimName: nginx-pv-claim
